--- a/taichi.html
+++ b/taichi.html
@@ -13,7 +13,7 @@
 
     <div >
         <h1>TAI CHI</h1>
-        <hr class="heading-line">
+        <hr class="underline">
     </div>
         
       <div class="container">
@@ -30,7 +30,7 @@
             (standing postures) Taiji forces, Sword form, Sanshou and Tuishou. </p>
             <p>Ultimately Tai Chi is alive, is beyond form and unlimited in its scope <br>
             to help us explore mind, body and spirit.</p>
-            <hr class="heading2-line">
+            <hr class="underline2">
           </div>
           <div class="col-sm-6">
           <img src="Images/taichi.png" class="taichi">
