--- a/taichi.html
+++ b/taichi.html
@@ -17,7 +17,7 @@
     </div>
         
       <div class="container">
-        <div class="row">
+        <div class="row taichi">
           <div class="col-sm-6">
             <h3>What is Tai Chi?</h3>
             <p>Tai Chi was originally developed as a martial art. Different skills and <br>
@@ -30,12 +30,55 @@
             (standing postures) Taiji forces, Sword form, Sanshou and Tuishou. </p>
             <p>Ultimately Tai Chi is alive, is beyond form and unlimited in its scope <br>
             to help us explore mind, body and spirit.</p>
-            <hr class="underline2">
+            <hr class="underline-taichi">
           </div>
-          <div class="col-sm-6">
-          <img src="Images/taichi.png" class="taichi">
+          <div class="col-sm-6 text-center">
+          <img src="Images/taichi.png" class="taichi-image">
           </div>
       </div>
+
+      <div class="container">
+        <div class="row classes">
+          <div class="col-sm-6 text-center"> 
+            <img src="Images/taichi2.png" class="classes-image">
+          </div>
+          <div class="col-sm-6">
+            <h3>My Classes</h3>
+            <p>Tai Chi was originally developed as a martial art. Different skills and <br>
+            family styles were kept secret and available only within the families, who <br>
+            were generally influential and wealthy. In the 1920’s the great proponents <br>
+            of Tai chi began to focus more on the health elements for which Tai Chi is <br>
+            now, certainly in the West, more popularly renowned as.</p>
+            <p>I have studied Tai chi for thirty years and have been teaching since 2001. <br>
+            In that time I have explored different short and long forms, Taiji 37 <br>
+            (standing postures) Taiji forces, Sword form, Sanshou and Tuishou. </p>
+            <p>Ultimately Tai Chi is alive, is beyond form and unlimited in its scope <br>
+            to help us explore mind, body and spirit.</p>
+            <hr class="underline-classes">
+          </div>
+      </div>
+
+      <form>
+        <h3 class="book-now">Book Now</h3>
+        <hr class="underline-book">
+        <div class="form-row">
+          <div class="form-group col-md-6">
+            <label for="firstname">First Name*</label>
+            <input type="firstname" class="form-control" id="firstname" placeholder="First Name">
+          </div>
+          <div class="form-group col-md-6">
+            <label for="lastname">Last Name</label>
+            <input type="lastname" class="form-control" id="lastname" placeholder="Last Name">
+          </div>
+        </div>
+        <div class="form-row">
+        <div class="form-group col-md-12">
+          <label for="exampleFormControlInput1">Email address</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        </div>
+      </div>
+    </div>
+      </form>
 
 </body>
 </html>
