--- a/taichi.html
+++ b/taichi.html
@@ -44,41 +44,61 @@
           </div>
           <div class="col-sm-6">
             <h3>My Classes</h3>
-            <p>Tai Chi was originally developed as a martial art. Different skills and <br>
-            family styles were kept secret and available only within the families, who <br>
-            were generally influential and wealthy. In the 1920’s the great proponents <br>
-            of Tai chi began to focus more on the health elements for which Tai Chi is <br>
-            now, certainly in the West, more popularly renowned as.</p>
-            <p>I have studied Tai chi for thirty years and have been teaching since 2001. <br>
-            In that time I have explored different short and long forms, Taiji 37 <br>
-            (standing postures) Taiji forces, Sword form, Sanshou and Tuishou. </p>
+            <p>My Tai Chi classes incorporate from, standing postures and some  <br>
+            philosophy and prinicples. The martial element is acknowledged through <br>
+            sometimes showing applicatiosns (in order to understand a movement)  <br>
+            and some partner work. Depending upon the groupdifferent aspects of  <br>
+            Tai Chi may be employed. I have worked with many groups where people <br>
+            have limited movement and it is still possible to explore Tai Chi.</p>
+            <p>New students will generally begin by working on posture and principles. <br>
+            I also introduce exercises to help activate the dantian and begin the <br>
+            understanding of energetics. Tai chi can be a lifetime study, but many <br>
+            people come simply to unwind and practice it as a form of movement <br>
+            therapy and release of stress and physical tension. Lightness and <br>
+            humour keep the balance in this most profound of studies! </p>
             <p>Ultimately Tai Chi is alive, is beyond form and unlimited in its scope <br>
             to help us explore mind, body and spirit.</p>
+            <p><strong>Fill out the interest form below to book a Tai Chi class.</strong></p>
             <hr class="underline-classes">
           </div>
       </div>
 
-      <form>
+      <form class="form">
         <h3 class="book-now">Book Now</h3>
         <hr class="underline-book">
         <div class="form-row">
           <div class="form-group col-md-6">
             <label for="firstname">First Name*</label>
-            <input type="firstname" class="form-control" id="firstname" placeholder="First Name">
+            <input type="firstname" class="form-control" id="firstname">
           </div>
           <div class="form-group col-md-6">
             <label for="lastname">Last Name</label>
-            <input type="lastname" class="form-control" id="lastname" placeholder="Last Name">
+            <input type="lastname" class="form-control" id="lastname">
           </div>
         </div>
         <div class="form-row">
-        <div class="form-group col-md-12">
-          <label for="exampleFormControlInput1">Email address</label>
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+         <div class="form-group col-md-12">
+           <label for="email">Email address</label>
+           <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+         </div>
+        </div> 
+        <div class="form-row">
+          <div class="form-group col-md-12">
+            <label for="subject">Subject</label>
+            <input type="subject" class="form-control" id="subject">
+          </div>
+        </div> 
+        <div class="form-group">
+          <div class="form-group col-md-12"></div>
+          <label for="subject">Message</label>
+          <textarea class="form-control" id="subject" rows="3"></textarea>
+          </div>
         </div>
-      </div>
-    </div>
+        <div class="text-center submit">
+          <button class="btn btn-primary" type="submit">Submit form</button>
+        </div>
       </form>
+      <hr class="underline-end">
 
 </body>
 </html>
