--- a/taichi.html
+++ b/taichi.html
@@ -11,14 +11,14 @@
 </head>
 <body>
 
-    <div >
+    <div class="fade-in">
         <h1>TAI CHI</h1>
         <hr class="underline">
     </div>
-        
+
       <div class="container">
         <div class="row taichi">
-          <div class="col-sm-6">
+          <div class="col-sm-6 slide-in from-left">
             <h3>What is Tai Chi?</h3>
             <p>Tai Chi was originally developed as a martial art. Different skills and <br>
             family styles were kept secret and available only within the families, who <br>
@@ -32,17 +32,17 @@
             to help us explore mind, body and spirit.</p>
             <hr class="underline-taichi">
           </div>
-          <div class="col-sm-6 text-center">
+          <div class="col-sm-6 text-center slide-in from-right">
           <img src="Images/taichi.png" class="taichi-image">
           </div>
       </div>
 
       <div class="container">
         <div class="row classes">
-          <div class="col-sm-6 text-center"> 
+          <div class="col-sm-6 text-center slide-in from-left"> 
             <img src="Images/taichi2.png" class="classes-image">
           </div>
-          <div class="col-sm-6">
+          <div class="col-sm-6 slide-in from-right">
             <h3>My Classes</h3>
             <p>My Tai Chi classes incorporate from, standing postures and some  <br>
             philosophy and prinicples. The martial element is acknowledged through <br>
@@ -99,6 +99,8 @@
         </div>
       </form>
       <hr class="underline-end">
+
+      <script src="script.js"></script>
 
 </body>
 </html>
