--- a/taichi.html
+++ b/taichi.html
@@ -63,7 +63,7 @@
           </div>
       </div>
 
-      <form class="form">
+      <form class="form fade-in">
         <h3 class="book-now">Book Now</h3>
         <hr class="underline-book">
         <div class="form-row">
