--- a/taichi.html
+++ b/taichi.html
@@ -30,7 +30,7 @@
             (standing postures) Taiji forces, Sword form, Sanshou and Tuishou. </p>
             <p>Ultimately Tai Chi is alive, is beyond form and unlimited in its scope <br>
             to help us explore mind, body and spirit.</p>
-            <hr class="underline-taichi">
+            <hr class="underline2">
           </div>
           <div class="col-sm-6 text-center slide-in from-right">
           <img src="Images/taichi.png" class="taichi-image">
