--- a/taijiwuxgong.html
+++ b/taijiwuxgong.html
@@ -32,10 +32,10 @@
             awakening one’s sensitivity to natural spontaneour movements.</p>
             <p>Exercises aim to integrate the body, breath, Yuan (vital) Qi
             and the mind.</p>
-            <hr class="underline-taichi">
+            <hr class="underline2">
           </div>
           <div class="col-sm-6 text-center slide-in from-right">
-          <img src="Images/taijiwuxgong.png" class="taijiwuxgong-image">
+          <img src="Images/taijiwuxgong.png" class="image">
           </div>
       </div>
 
@@ -57,7 +57,7 @@
             symptoms of a variety of chronic and debilitating health conditions <br>
             and can be adapted to suit all ages and states of health. <br>
             All are welcome!.</p>
-            <p><strong>Fill out the interest form below to book a Tai Chi class.</strong></p>
+            <p><strong>Fill out the interest form below to book a Taijiwuxgong class.</strong></p>
             <hr class="underline-classes">
           </div>
       </div>
