--- a/taichi.html
+++ b/taichi.html
@@ -16,51 +16,60 @@
         <hr class="underline">
     </div>
 
-      <div class="container">
-        <div class="row taichi">
-          <div class="col-sm-6 slide-in from-left">
-            <h3>What is Tai Chi?</h3>
-            <p>Tai Chi was originally developed as a martial art. Different skills and <br>
-            family styles were kept secret and available only within the families, who <br>
-            were generally influential and wealthy. In the 1920’s the great proponents <br>
-            of Tai chi began to focus more on the health elements for which Tai Chi is <br>
-            now, certainly in the West, more popularly renowned as.</p>
-            <p>I have studied Tai chi for thirty years and have been teaching since 2001. <br>
-            In that time I have explored different short and long forms, Taiji 37 <br>
-            (standing postures) Taiji forces, Sword form, Sanshou and Tuishou. </p>
-            <p>Ultimately Tai Chi is alive, is beyond form and unlimited in its scope <br>
-            to help us explore mind, body and spirit.</p>
-            <hr class="underline2">
+      <div class="container taichi">
+        <div class="row justify-content-center ">
+          <div class="col-sm-12 col-md-6 taichi-container slide-in from-left">
+            <h3 class="taichi-title">What is Tai Chi?</h3>
+            <p>Tai Chi was originally developed as a martial 
+                art. Different skills and family styles were 
+                kept secret and available only within the 
+                families, who were generally influential and 
+                wealthy. In the 1920’s the great proponents <br>
+                of Tai chi began to focus more on the health 
+                elements for which Tai Chi is now, certainly 
+                in the West, more popularly renowned as.</p>
+                <p>I have studied Tai chi for thirty years 
+                and have been teaching since 2001. In that 
+                time I have explored different short and long 
+                forms, Taiji 37 (standing postures) Taiji 
+                forces, Sword form, Sanshou and Tuishou. </p>
+                <p>Ultimately Tai Chi is alive, is beyond 
+                form and unlimited in its scope to help us 
+                explore mind, body and spirit.</p>
           </div>
-          <div class="col-sm-6 text-center slide-in from-right">
-          <img src="Images/taichi.png" class="taichi-image">
+
+          <div class="col-sm-12 col-md-6 taichiimage-container slide-in from-right">
+            <img src="Images/taichi.png" class="taichi-image">
           </div>
+        </div>
       </div>
 
-      <div class="container">
-        <div class="row classes">
-          <div class="col-sm-6 text-center slide-in from-left"> 
-            <img src="Images/taichi2.png" class="classes-image">
+      <div class="container taichi-classes">
+        <div class="row justify-content-center waha">
+          <div class="col-sm-12 col-md-6 col-md-push-6 classes-container slide-in from-left">
+            <h3 class="classes-title">My Classes</h3>
+            <p>Tai Chi was originally developed as a martial 
+                art. Different skills and family styles were 
+                kept secret and available only within the 
+                families, who were generally influential and 
+                wealthy. In the 1920’s the great proponents 
+                of Tai chi began to focus more on the health 
+                elements for which Tai Chi is now, certainly 
+                in the West, more popularly renowned as.</p>
+                <p>I have studied Tai chi for thirty years 
+                and have been teaching since 2001. In that 
+                time I have explored different short and long 
+                forms, Taiji 37 (standing postures) Taiji 
+                forces, Sword form, Sanshou and Tuishou. </p>
+                <p>Ultimately Tai Chi is alive, is beyond 
+                form and unlimited in its scope to help us 
+                explore mind, body and spirit.</p>
           </div>
-          <div class="col-sm-6 slide-in from-right">
-            <h3>My Classes</h3>
-            <p>My Tai Chi classes incorporate from, standing postures and some  <br>
-            philosophy and prinicples. The martial element is acknowledged through <br>
-            sometimes showing applicatiosns (in order to understand a movement)  <br>
-            and some partner work. Depending upon the groupdifferent aspects of  <br>
-            Tai Chi may be employed. I have worked with many groups where people <br>
-            have limited movement and it is still possible to explore Tai Chi.</p>
-            <p>New students will generally begin by working on posture and principles. <br>
-            I also introduce exercises to help activate the dantian and begin the <br>
-            understanding of energetics. Tai chi can be a lifetime study, but many <br>
-            people come simply to unwind and practice it as a form of movement <br>
-            therapy and release of stress and physical tension. Lightness and <br>
-            humour keep the balance in this most profound of studies! </p>
-            <p>Ultimately Tai Chi is alive, is beyond form and unlimited in its scope <br>
-            to help us explore mind, body and spirit.</p>
-            <p><strong>Fill out the interest form below to book a Tai Chi class.</strong></p>
-            <hr class="underline-classes">
+
+          <div class="col-sm-12 col-md-6 col-md-pull-6 classesimage-container slide-in from-right">
+            <img src="Images/taichi2.png" class="taichi2-image">
           </div>
+        </div>
       </div>
 
       <form class="form fade-in">
@@ -88,18 +97,19 @@
             <input type="subject" class="form-control" id="subject">
           </div>
         </div> 
-        <div class="form-group">
+        <div class="form-group message">
           <div class="form-group col-md-12"></div>
           <label for="subject">Message</label>
-          <textarea class="form-control" id="subject" rows="3"></textarea>
+          <textarea class="form-control" id="message" rows="3"></textarea>
           </div>
         </div>
         <div class="text-center submit">
           <button class="btn btn-primary" type="submit">Submit form</button>
         </div>
       </form>
-      <hr class="underline-end">
 
+      <hr class="underline-end">
+      
       <script src="script.js"></script>
 
 </body>
