--- a/taichi.html
+++ b/taichi.html
@@ -46,7 +46,7 @@
 
       <div class="container taichi-classes">
         <div class="row justify-content-center waha">
-          <div class="col-sm-12 col-md-6 col-md-push-6 classes-container slide-in from-left">
+          <div class="col-sm-12 col-md-6 col-md-push-6 classes-container slide-in from-right">
             <h3 class="classes-title">My Classes</h3>
             <p>Tai Chi was originally developed as a martial 
                 art. Different skills and family styles were 
@@ -66,7 +66,7 @@
                 explore mind, body and spirit.</p>
           </div>
 
-          <div class="col-sm-12 col-md-6 col-md-pull-6 classesimage-container slide-in from-right">
+          <div class="col-sm-12 col-md-6 col-md-pull-6 classesimage-container slide-in from-left">
             <img src="Images/taichi2.png" class="taichi2-image">
           </div>
         </div>
