--- a/taijiwuxgong.html
+++ b/taijiwuxgong.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Taijiwuxgong</title>
+<title>Tai Chi</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
@@ -12,54 +12,64 @@
 <body>
 
     <div class="fade-in">
-        <h1>TAIJIWUXGONG</h1>
+        <h1>TAI CHI</h1>
         <hr class="underline">
     </div>
 
-      <div class="container">
-        <div class="row taichi">
-          <div class="col-sm-6 slide-in from-left">
-            <h3>What is Taijiwuxgong?</h3>
-            <p>Taijiwuxigong is a Qigong and exercise system that has been researched <br>
-            and refined by Dr.Shen for more than 40 years. Based on and developed <br>
-            from the self-healing element of Tai Chi, it uses Daoyin exercises and <br>
-            Spontaneous Movement to activate the Dantain, clean the meridian <br>
-            system and expel binqi (sick information) from the body.</p>
-            <p>Employing a variety of moving, standing, sitting and lying down <br>
-            exercises combined with breathing, sound and mental concentration <br>
-            techniques, Taijiwuxigong focuses on activating the Dantain (the main 
-            energy centre of the body), correcting postural alignment and <br>
-            awakening one’s sensitivity to natural spontaneour movements.</p>
-            <p>Exercises aim to integrate the body, breath, Yuan (vital) Qi
-            and the mind.</p>
-            <hr class="underline2">
+      <div class="container taichi">
+        <div class="row justify-content-center ">
+          <div class="col-sm-12 col-md-6 taichi-container slide-in from-left">
+            <h3 class="taichi-title">What is Tai Chi?</h3>
+            <p>Tai Chi was originally developed as a martial 
+                art. Different skills and family styles were 
+                kept secret and available only within the 
+                families, who were generally influential and 
+                wealthy. In the 1920’s the great proponents <br>
+                of Tai chi began to focus more on the health 
+                elements for which Tai Chi is now, certainly 
+                in the West, more popularly renowned as.</p>
+                <p>I have studied Tai chi for thirty years 
+                and have been teaching since 2001. In that 
+                time I have explored different short and long 
+                forms, Taiji 37 (standing postures) Taiji 
+                forces, Sword form, Sanshou and Tuishou. </p>
+                <p>Ultimately Tai Chi is alive, is beyond 
+                form and unlimited in its scope to help us 
+                explore mind, body and spirit.</p>
           </div>
-          <div class="col-sm-6 text-center slide-in from-right">
-          <img src="Images/taijiwuxgong.png" class="image">
+
+          <div class="col-sm-12 col-md-6 taichiimage-container slide-in from-right">
+            <img src="Images/taichi.png" class="taichi-image">
           </div>
+        </div>
       </div>
 
-      <div class="container">
-        <div class="row classes">
-          <div class="col-sm-6 text-center slide-in from-left"> 
-            <img src="Images/taijiwuxgong2.png" class="classes-image">
+      <div class="container taichi-classes">
+        <div class="row justify-content-center waha">
+          <div class="col-sm-12 col-md-6 col-md-push-6 classes-container slide-in from-right">
+            <h3 class="classes-title">My Classes</h3>
+            <p>Tai Chi was originally developed as a martial 
+                art. Different skills and family styles were 
+                kept secret and available only within the 
+                families, who were generally influential and 
+                wealthy. In the 1920’s the great proponents 
+                of Tai chi began to focus more on the health 
+                elements for which Tai Chi is now, certainly 
+                in the West, more popularly renowned as.</p>
+                <p>I have studied Tai chi for thirty years 
+                and have been teaching since 2001. In that 
+                time I have explored different short and long 
+                forms, Taiji 37 (standing postures) Taiji 
+                forces, Sword form, Sanshou and Tuishou. </p>
+                <p>Ultimately Tai Chi is alive, is beyond 
+                form and unlimited in its scope to help us 
+                explore mind, body and spirit.</p>
           </div>
-          <div class="col-sm-6 slide-in from-right">
-            <h3>My Classes</h3>
-            <p>At the beginning, learning about the importance of posture is <br>
-            key and this combined with specific exercises encourages the <br>
-            release of emotional trauma and physical and mental blockages and 
-            tension. Gradually, this clearing and releasing of old <br>
-            ‘information’ helps to develop greater clarity of mind a stronger <br>
-            sense of self-worth and internal peace and a deepening compassion <br>
-            towards one self and others. </p>
-            <p>Taijiwuxigong has proved effective in treating and/or relieving <br>
-            symptoms of a variety of chronic and debilitating health conditions <br>
-            and can be adapted to suit all ages and states of health. <br>
-            All are welcome!.</p>
-            <p><strong>Fill out the interest form below to book a Taijiwuxgong class.</strong></p>
-            <hr class="underline-classes">
+
+          <div class="col-sm-12 col-md-6 col-md-pull-6 classesimage-container slide-in from-left">
+            <img src="Images/taichi2.png" class="taichi2-image">
           </div>
+        </div>
       </div>
 
       <form class="form fade-in">
@@ -87,18 +97,22 @@
             <input type="subject" class="form-control" id="subject">
           </div>
         </div> 
-        <div class="form-group">
+        <div class="form-group message">
           <div class="form-group col-md-12"></div>
           <label for="subject">Message</label>
-          <textarea class="form-control" id="subject" rows="3"></textarea>
+          <textarea class="form-control" id="message" rows="3"></textarea>
           </div>
         </div>
         <div class="text-center submit">
           <button class="btn btn-primary" type="submit">Submit form</button>
         </div>
       </form>
-      <hr class="underline-end">
 
+      <div class="fade-in">
+        <hr class="underline-end">
+      </div>
+      
+      
       <script src="script.js"></script>
 
 </body>
