--- a/taichi.html
+++ b/taichi.html
@@ -20,11 +20,11 @@
         <div class="row justify-content-center ">
           <div class="col-sm-12 col-md-6 taichi-container slide-in from-left">
             <h3 class="taichi-title">What is Tai Chi?</h3>
-            <p>Tai Chi was originally developed as a martial 
+               <p>Tai Chi was originally developed as a martial 
                 art. Different skills and family styles were 
                 kept secret and available only within the 
                 families, who were generally influential and 
-                wealthy. In the 1920’s the great proponents <br>
+                wealthy. In the 1920’s the great proponents 
                 of Tai chi began to focus more on the health 
                 elements for which Tai Chi is now, certainly 
                 in the West, more popularly renowned as.</p>
